--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-Hello World
+<!doctype html>
+<html>
+  <head>
+    <title>Giuseppe Modarelli</title>
+    <link rel="stylesheet" href="github-markdown-css/github-markdown.css">
+    <style>
+      .markdown-body {
+        box-sizing: border-box;
+        min-width: 200px;
+        max-width: 980px;
+        margin: 0 auto;
+        padding: 45px;
+      }
+    </style>
+  </head>
+  <body>
+    <article class="markdown-body">
+      <h1>Giuseppe Modarelli</h1>
+      <h6>Backend Engineer @ Wooga</h6>
+    </article>
+  </body>
+</html>
