Generate a complete post from a MD file

--- a/_posts/my-first-steps-in-erlang.html
+++ b/_posts/my-first-steps-in-erlang.html
@@ -1,4 +1,24 @@
-<p>Today I will not publish a post about explaining source code because I want to share with you my experience 
+<!doctype html>
+<html>
+  <head>
+    <title>Giuseppe Modarelli</title>
+    <link rel="stylesheet" href="../github-markdown-css/github-markdown.css">
+    <style>
+      .markdown-body {
+        box-sizing: border-box;
+        min-width: 200px;
+        max-width: 980px;
+        margin: 0 auto;
+        padding: 45px;
+      }
+    </style>
+  </head>
+  <body>
+    <article class="markdown-body">
+      <h1>my-first-steps-in-erlang</h1>
+      <h6>Monday, 15 February 2016</h6>
+
+      <p>Today I will not publish a post about explaining source code because I want to share with you my experience 
 with Erlang.</p>
 
 <p>If you want to know more about my series on Explaining Source Code you can out
@@ -19,3 +39,8 @@ in a format that the MongooseIM server is sending. Unfortunately we couldn’t m
 so the only solution was to dive deep into the server and try to find the offending date format.</p>
 
 <p>Thanks to the android app log we were able to identify the source of the problem, this xml tag:</p>
+
+    </article>
+  </body>
+</html>
+
